[project]
name = "surtr"
description = ""
authors = [
    {name = "Sigurd Hofsmo Jakobsen", email = "sigurd.jakobsen@gmail.com"},
]
dependencies = [
    "numpy",
    "pyomo",
    "highspy"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "LGPL"}
version = "0.1.0"

[project.optional-dependencies]
examples = [
    "jupyterlab>=4.0.7",
    "matplotlib>=3.8.0",
]
